# mantle

./: .gitignore  Cargo.toml  README.de.md  README.es.md  README.fr.md  README.md  README.pt-BR.md  README.zh-CN.md
.githooks/: pre-commit
.github/: ci.yml
.github/workflows/: main.yml
data/: products.json
locales/: de.yml  en.yml  es.yml  fr.yml  pt-BR.yml  zh-CN.yml
src/: action.rs  app.rs  audio.rs  bulb_info.rs  color.rs  device_info.rs  device_manager.rs  helpers.rs  lib.rs  listener.rs  main.rs  manager.rs  mcp.rs  products.rs  refreshable_data.rs  scenes.rs  screencap.rs  serializers.rs  settings.rs  shortcut.rs  signalrgb.rs  ui.rs  utils.rs  widgets.rs
src/data/: products.json
src/listener/: input_action.rs  input_item.rs  input_listener.rs  key_mapping.rs  mod.rs  shared_input_state.rs  tests.rs
src/ui/: mod.rs  screencap.rs  waveform.rs  widgets.rs
