[package]
name = "mantle"
authors = ["Sawyer McLane"]
description = "A simple LIFX control application"
version = "0.0.5"
repository = "https://github.com/samclane/mantle"
readme = "README.md"
keywords = ["lifx", "home", "automation", "lighting"]
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lifx-core = "0.4.0"
get_if_addrs = "0.5.3"
failure = "0.1.8"
eframe = { version = "0.28.1", features = ["persistence"] }
egui_extras = { version = "0.28.1", features = ["default", "image"] }
env_logger = { version = "0.11.5", features = ["auto-color", "humantime"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
log = "0.4.22"
log4rs = "1.3.0"
image = "0.23.14"
xcap = "0.0.12"
puffin = { "version" = "0.19.1" }
puffin_http = { "version" = "0.16.1" }
rdev = { version = "0.5.3", features = [ "serialize"] }