[package]
name = "mantle"
authors = ["Sawyer McLane"]
description = "A simple LIFX control application"
version = "0.0.17"
repository = "https://github.com/samclane/mantle"
readme = "README.md"
keywords = ["lifx", "home", "automation", "lighting"]
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lifx-core = "0.4.0"
get_if_addrs = "0.5.3"
eframe = { version = "0.30.0", features = ["persistence"] }
egui_extras = { version = "0.30.0", features = ["default", "image"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
log4rs = "1.4.0"
image = "0.23.14"
xcap = "0.0.12"
puffin = { "version" = "0.19.1", optional = true }
puffin_http = { "version" = "0.16.1",  optional = true }
rdev = { version = "0.5.3", features = [ "serialize"] }
egui-toast = "0.16.0"
epaint = { version = "0.30.0" }
cpal = "0.15.3"
egui_plot = "0.30.0"
rustfft = "6.4.1"
strum = "0.27"
strum_macros = "0.27"
tray-icon = "0.22.0"
rfd = "0.17.2"
anyhow = "1.0.102"
rust-i18n = "3"

[features]
puffin = ["dep:puffin", "dep:puffin_http"]
